v1.4.10 / fix: home color picker input was clickable through the map and visible if the map failed to load fast enough

--- a/styles.css
+++ b/styles.css
@@ -204,9 +204,9 @@ body {
 }
 
 .jscolor_home_container {
-  top: 9%;
-  left: -6%;
-  z-index: 200;
+  top: 8%;
+  left: -10%;
+  z-index: 1;
   position: absolute;
 }
 
